--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.0.8",
     "uuid": "^8.3.2"
   },
