--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/server.js"
   },
@@ -16,9 +17,11 @@
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.0.8",
+    "typescript": "^4.9.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "nodemon": "^2.0.19"
   }
 }
