added additional compiler warnings for: noImplicitAny, noImplicitThis, noImplicitOverride, noImplicitReturns

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "outDir": "dist",
     "alwaysStrict": true,
     "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
   },
   "include": ["src/**/*"],
   "exclude": [""],
