--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "ES2020",
+    "moduleResolution": "node",
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
