--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/express": "^4.17.16",
     "@types/multer": "^1.4.7",
+    "@types/sqlite3": "^3.1.8",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
