--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.16",
-    "@types/multer": "^1.4.7",
-    "@types/sqlite3": "^3.1.8",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.0.8",
-    "typescript": "^4.9.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
-    "nodemon": "^2.0.19"
+    "@types/multer": "^1.4.7",
+    "@types/sqlite3": "^3.1.8",
+    "nodemon": "^2.0.19",
+    "typescript": "^4.9.4"
   }
 }
