--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "ES2020",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
@@ -11,6 +12,7 @@
     "noImplicitThis": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "removeComments": true,
   },
   "include": ["src/**/*"],
   "exclude": [""],
