--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
-    "@types/node": "^18.11.18",
     "@types/multer": "^1.4.7",
+    "@types/node": "^18.11.18",
     "@types/sqlite3": "^3.1.8",
+    "concurrently": "^7.6.0",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.19",
     "typescript": "^4.9.4"
   }
