--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "concurrently": "^7.6.0",
     "copyfiles": "^2.4.1",
     "nodemon": "^2.0.19",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4"
   }
 }
