--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "prettier-format": "prettier --config .prettierrc.json \"src/**/*.ts\" --write",
+    "lint": "eslint . --ext .ts",
     "build": "tsc",
     "clean": "rimraf dist",
     "copy-assets": "copyfiles -u 1 src/views/**/*.ejs dist/",
@@ -31,8 +33,14 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/sqlite3": "^3.1.8",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "concurrently": "^7.6.0",
     "copyfiles": "^2.4.1",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
