--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-require-extensions": "^0.1.2",
     "nodemon": "^2.0.19",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
