--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:ts-ejs": "nodemon -w src -e ts,ejs --delay 1.5 --exec \"npm run copy-assets && npm run delay && node dist/server.js\"",
-    "delay": "node -e \"setTimeout(()=>{}, 2500)\""
+    "delay": "node -e \"setTimeout(()=>{}, 2500)\"",
+    "prepare": "husky install"
   },
   "type": "module",
   "author": "",
@@ -42,6 +43,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-require-extensions": "^0.1.2",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
