--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-require-extensions": "^0.1.2",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "nodemon": "^2.0.19",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
