--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -139,13 +139,7 @@
         ]
       }
     ],
-    "lines-between-class-members": [
-      "error",
-      "always",
-      {
-        "exceptAfterSingleLine": true
-      }
-    ],
+    "lines-between-class-members": "off",
     "no-shadow": "off", // replaced by ts-eslint rule below
     "@typescript-eslint/no-shadow": "error",
     "import/no-unresolved": "off",
